# computer_networks_project

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
docs/: spec.md
include/: library_name.hpp
scripts/: build.sh  clean.sh  kill.sh  kill_and_clean.sh
scripts/scenarios/: scenario1_a.sh  scenario1_b.sh  scenario2.sh  scenario3.sh  scenario4.sh  scenario5.sh
source/computer_networks_project/: CMakeLists.txt
source/computer_networks_project/bridge/: bridge.cpp  bridge.hpp  bridge.test.cpp
source/computer_networks_project/cli/: bridge.cpp  bridge.hpp  host.cpp  router.cpp
source/computer_networks_project/host/: host.cpp  host.hpp  host.test.cpp
source/computer_networks_project/link/: link.cpp  link.hpp  link.test.cpp
source/computer_networks_project/packet/: packet.cpp  packet.hpp  packet.test.cpp
source/computer_networks_project/router/: router.cpp  router.hpp  router.test.cpp
source/computer_networks_project/utils/: utils.cpp  utils.hpp
source/library_name/foo/: foo.cpp  foo.hpp
